[APPBUG-5913] Fixed spacing on form header
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@84522 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/Media/docroot/assets/css/global/help.css
+++ b/projects/Media/docroot/assets/css/global/help.css
@@ -303,6 +303,10 @@ input[type="text"].search-input::placeholder {
 	display: none;
 }
 
+.cs-contact-hours div p:nth-child(2) {
+	padding-top: 35px;
+}
+
 .help-contact-form.subheader {
 	color: #333333;
 }
